<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">
        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/reg"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signuptextmargintop">

            <EditText
                android:id="@+id/name"
                style="@style/modifiedEditText"
                android:hint="Name"
                android:textColor="@color/black"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signuptextmargintop">

            <EditText
                android:id="@+id/email"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signuptextmargintop">
            <EditText
                android:id="@+id/pass"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/cirLoginButtonReg"
            app:spinning_bar_width="4dp"
            app:spinning_bar_color="#FFF"
            android:text="@string/register"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            app:spinning_bar_padding="6dp"
            app:initialCornerAngle="27dp"
            android:textStyle="bold"
            android:background="@drawable/login_button_bk"
            android:textColor="@color/whiteTextColor"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView
            android:id="@+id/aSignUp"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_login_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.cardview.widget.CardView>