<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:weightSum="12">

        <LinearLayout
            style="@style/parent"
            android:layout_height="223dp"
            android:layout_weight="3"
            android:background="@drawable/login_shape_bk"
            android:orientation="vertical">

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/back"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:background="@drawable/back"
                android:text="X"
                android:textColor="@color/whiteTextColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:initialCornerAngle="27dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="4dp"
                app:spinning_bar_width="4dp" />

            <ImageView
                style="@style/parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_login_bk"
                android:contentDescription="login background" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/rentedRides"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/owned_rides"
        android:textColor="@color/primaryTextColor"
        android:theme="@style/PrimaryFlatButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/regVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/reg_a_vehicle"
        android:textColor="@color/primaryTextColor"
        android:theme="@style/PrimaryFlatButton"
        app:layout_constraintTop_toBottomOf="@+id/rentedRides"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/privacy_policy"
        android:textColor="@color/primaryTextColor"
        android:theme="@style/PrimaryFlatButton"
        app:layout_constraintTop_toBottomOf="@+id/regVehicle"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/aboutus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/about_us"
        android:textColor="@color/primaryTextColor"
        android:theme="@style/PrimaryFlatButton"
        app:layout_constraintTop_toBottomOf="@+id/privacy"
        tools:layout_editor_absoluteX="16dp" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/cirLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:background="@drawable/login_button_bk"
        android:text="@string/logout_button_text"
        android:textColor="@color/whiteTextColor"
        android:textStyle="bold"
        app:initialCornerAngle="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutus"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>