<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            style="@style/parent"
            android:layout_height="150dp"
            android:layout_weight="3"
            android:background="@drawable/login_shape_bk"
            android:orientation="vertical">

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/aboutusback"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:background="@drawable/back"
                android:text="X"
                android:textColor="@color/whiteTextColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:initialCornerAngle="27dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="4dp"
                app:spinning_bar_width="4dp" />

            <ImageView
                style="@style/parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_login_bk"
                android:contentDescription="login background" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signuptextmargintop">
       <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/developed_by"
           android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="24dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signuptextmargintop">
            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/manoj_kumar_b"
                android:textAlignment="center"
                android:textSize="28sp"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signuptextmargintop">
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/email_manu190200_gmail_com"
                android:textAlignment="center"
                android:textSize="14sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signuptextmargintop">
            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/version_1_9"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="italic"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signuptextmargintop">
            <TextView
                android:id="@+id/tnx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/thankyou_for_using_the_app"
                android:textAlignment="center"
                android:textSize="26sp"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>