<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">



    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="Login"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/semail"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:maxLines="1"
                android:hint="@string/login_email_hint"
                android:textColorHint="@color/whiteCardColor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/spass"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:textColor="@color/black"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotpassword"
            style="@style/viewParent"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:onClick="viewForgotPAssword"
            android:text="Forgot Password?"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/cirLogout"
            app:spinning_bar_width="4dp"
            app:spinning_bar_color="#FFF"
            android:text="@string/login_button_text"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            app:spinning_bar_padding="6dp"
            app:initialCornerAngle="27dp"
            android:textStyle="bold"
            android:background="@drawable/login_button_bk"
            android:textColor="@color/whiteTextColor"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView
            android:id="@+id/dSignUp"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:onClick="viewRegisterClicked"
            android:text="Don't have an account? Sign up"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.cardview.widget.CardView>